--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -4,3 +4,20 @@
   padding: 2rem;
   text-align: center;
 }
+
+.container {
+  font-family: "Manrope", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  width: 500px;
+  height: 500px;
+  padding: 10px;
+  margin: 10px 20px;
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
