--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -15,9 +15,11 @@
   padding: 10px;
   margin: 10px 20px;
   border: 2px solid black;
+  border-radius: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 10px;
+  position: relative;
 }
