--- a/src/components/İnfoList/İnfoList.module.css
+++ b/src/components/İnfoList/İnfoList.module.css
@@ -1,9 +1,9 @@
 .section {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 150px;
+  width: 500px;
+  height: 50px;
   border: 5px solid gray;
-  position: absolute;
   bottom: 0;
+  position: absolute;
 }
