--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,11 +1,12 @@
-#root {
+/*#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+}*/
 
-.container {
+/*.section {
+  margin: 0 auto;
   font-family: "Manrope", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -13,7 +14,6 @@
   width: 500px;
   height: 500px;
   padding: 10px;
-  margin: 10px 20px;
   border: 2px solid black;
   border-radius: 15px;
   display: flex;
@@ -23,3 +23,4 @@
   gap: 10px;
   position: relative;
 }
+*/
