--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0 auto;
 }
 h1,
 h2,
@@ -18,14 +14,14 @@ p {
   margin: 0;
 }
 
-body {
-  margin: 0;
+/*body {
+  margin: 0 auto;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
-
+*/
 ul,
 ol {
   margin: 0;
