--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,9 +1,8 @@
 .container {
-  width: 100%;
-  height: 100%;
-}
-.formBody {
   width: 400px;
   height: 500px;
   border: 1px solid black;
 }
+/*.formBody {
+ 
+}*/
