--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,8 +1,10 @@
 .container {
+  margin: 0 auto;
   width: 400px;
   height: 500px;
   border: 1px solid black;
 }
-/*.formBody {
- 
-}*/
+.formBody {
+  display: grid;
+  row-gap: 8px;
+}
