--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,10 +1,20 @@
 .container {
-  margin: 0 auto;
+  /*margin: 0 auto;
+  padding: 10px;
   width: 400px;
   height: 500px;
+  border: 1px solid black;*/
+  width: 100%;
+  border-collapse: collapse;
+  margin: 0 auto;
+  text-align: center;
+}
+.headEl {
   border: 1px solid black;
 }
-.formBody {
-  display: grid;
-  row-gap: 8px;
+.head {
+  text-transform: uppercase;
+}
+.cell {
+  border: 1px solid black;
 }
